--- a/ThesisProject/wwwroot/css/MenuStyle.css
+++ b/ThesisProject/wwwroot/css/MenuStyle.css
@@ -366,7 +366,23 @@ body.dark .switch::before {
 .main{
     
 }
+.home .profile-pic{
+    width:30px;
+    height:30px;
+    border-radius:50%;
+    margin-right:2%;
+}
+.home .right-corner{
+    position: absolute;
+    right: 2%;
+    top: 2%;
+    font-size: 15px;
+    display:flex;
+    width:150px;
+    justify-content:center;
+    align-items:center;
 
+}
 .sidebar.close ~ .home {
     left: 78px;
     height: 100vh;
