fixed problem with profile image and completed UserProfile

--- a/ThesisProject/Views/Home/Homepage.cshtml
+++ b/ThesisProject/Views/Home/Homepage.cshtml
@@ -106,7 +106,7 @@
                                         string mood = song.mood.Substring(0, 1).ToUpper() + song.mood.Substring(1);
                                     }
 
-                                    <td style="text-align:center">@mood</td>
+                                    <td style="text-align:center">@mood mood</td>
                                 </tr>
 
                                 i++;
