--- a/ThesisProject/wwwroot/css/HomepageStyle.css
+++ b/ThesisProject/wwwroot/css/HomepageStyle.css
@@ -55,9 +55,10 @@
     flex-direction:column;
     width:100%;
     height:100%;
-    padding-left:6%;
-    padding-right:6%;
+    padding-left:3%;
+    padding-right:3%;
     margin-bottom:2%;
+    margin-top:1%;
 }
 .down{
     height:70%;
@@ -117,12 +118,12 @@
 }
 
         .main .left .welcome-msg {
-            padding: 1%;
-            font-size: 38px;
-            font-weight: 500;
+            padding: 2%;
+            font-size: 45px;
             color: var(--text-color); 
             text-align:end;
             width:100%;
+            
         }
 
     .main .left img{
