--- a/ThesisProject/wwwroot/css/ProfileStyle.css
+++ b/ThesisProject/wwwroot/css/ProfileStyle.css
@@ -163,7 +163,6 @@
 }
     .statistics .statistics-title{
         color:var(--text-color);
-        font-weight:500;
         display:flex;
         align-items:center;
         padding-left:2%;
@@ -173,32 +172,88 @@
         padding: 2%;
         border-radius: 20px;
         color: white;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        height: 100%;
-        margin-bottom: 1%;
+        display:flex;
+        align-content:center;     
+        margin-bottom: 2%;
     }
-    .mostplayed .song-title{
-        font-size:30px;
+.mostplayed .song-title {
+    font-size: 30px;
+    color: #9fbb6f;
+}
+.mostplayed img{
+    width:80%;
+}
+.mostplayed .img{
+    width:60%;
+}
+.mostplayed .text1{
+    width:100%;
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    margin-left:4%;
+    align-items:center;
+}
+.bottom-container{
+    height:100%;
+    display:flex;
+}
 
+.favorite-artist {
+    width: 100%;
+    padding: 2%;
+    background-color: #F2C469;
+    border-radius: 20px;
+    height: 100%;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    justify-content:center;
+    color:white;
+    text-align:center;
+}
+    .favorite-artist h3 {
+        font-size: 45px;
+        color: #FAE4A6;
     }
-
 
 .statistics .favorite-genre {
     background-color: #F7E1DF;
     color: var(--text-color);
-    padding: 2%;
     border-radius: 20px;
     height: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
     width: 100%;
+    margin-right:2%;
+    text-align:center;
 }
-    .statistics .genre-title{
+.statistics .genre-title {
+    font-size: 45px;
+    color: #EB9481;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+
+}
+
+.favorite-mood {
+    background-color: #C1E3FE;
+    border-radius: 20px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    margin-left: 2%;
+    padding: 2%;
+    color:var(--text-color);
+}
+    .favorite-mood h3 {
+        color: #31469E;
         font-size:45px;
     }
 
