--- a/ThesisProject/Views/Home/Playlists.cshtml
+++ b/ThesisProject/Views/Home/Playlists.cshtml
@@ -126,6 +126,8 @@
                                             <input type="hidden" name="mood" value="@item.Song.mood" />
                                             <input type="hidden" name="songid" value="@item.Song.songId" />
                                             <input type="hidden" name="isliked" value="@item.isLiked" />
+                                            <input type="hidden" name="profile" value="@ViewBag.ProfileImage" />
+
                                             <button type="submit" class="heart">
                                                 <i class='bx bx-heart icon buttons '></i>
                                             </button>   
@@ -141,6 +143,7 @@
                                             <input type="hidden" name="mood" value="@item.Song.mood" />
                                             <input type="hidden" name="songid" value="@item.Song.songId" />
                                             <input type="hidden" name="isliked" value="@item.isLiked" />
+                                            <input type="hidden" name="profile" value="@ViewBag.ProfileImage" />
                                             <button type="submit" class="heart">
                                                 <i class='bx bxs-heart icon buttons '></i>
                                             </button>
